gcc/testsuite/rust/rustc/ui/resolve/missing-in-namespace.rs
fn main() {
    let _map = std::hahmap::HashMap::new();
// { dg-error ".E0433." "" { target *-*-* } .-1 }
}

